--- a/끝말잇기/index.html
+++ b/끝말잇기/index.html
@@ -135,7 +135,9 @@ const gamestart =()=>{
                 $input.value ='';
                 $input.focus();
             }else{
-                
+                alert('올바르지 않은 단어입니다.');
+                $input.value ='';
+                $input.focus();
             }      
         }
    }
