--- a/javascript기초/숫자야구.html
+++ b/javascript기초/숫자야구.html
@@ -22,11 +22,71 @@
 		}
 		const answer = [];
 		for (let n=0; n<4; n+=1){
-			const index = Math.floor(Math.random()*9);// 0~8 정수
+			const index = Math.floor(Math.random()*(numbers.length));// 0~8 정수
 			answer.push(numbers[index]);
 			numbers.splice(index,1);
 		}
 		console.log(answer);
+		const tries = [];
+		function checkInput(input){
+			if(input.length !== 4){
+				return alert('4 자리 숫자를 입력해주세요.');
+			}
+			if(new Set(input).size !== 4){ //중복을 없에준다 Set
+				return alert('중복되지 않게 입력해주세요.');
+			}
+			if(tries.includes(input)){
+				return alert('이미 시도한 값입니다.');
+			}
+			return true;
+		}
+		let out = 0;
+		$form.addEventListener('submit',(event)=>{
+			event.preventDefault();
+			const value = $input.value;
+			$input.value = '';
+			if(!checkInput(value)){
+				return;
+			};
+			//문제없음
+			if(answer.join('') === value){//문자열로 바꾸어준다 join(':') 1:2:3:4 
+				$logs.textContent = '홈런';
+				return;
+			}
+			if(tries.length>=9){
+				const message = document.createTextNode(`패배! 정답은 ${answer.join('')}`)
+				$logs.appendChild(message);
+				return;
+			}
+			//몇볼 몇스트라이크 인지 검사
+			let strike =0;
+			let ball = 0;
+			for(let i =0; i<answer.length; i++){
+				const index = value.indexOf(answer[i]);
+				if(index > -1){
+					if(index === i){
+						strike += 1;
+						
+					}else{
+						ball += 1;
+					}
+				}
+				
+			}
+			if(strike === 0 && ball === 0){
+				out++;
+				$logs.append(`${value}:아웃`, document.createElement('br'));
+				console.log(out);
+			}else{
+				$logs.append(`${value}: ${strike} 스트라이크 ${ball}볼`,document.createElement('br'));
+			}
+			if( out === 3 ){
+				const message = document.createTextNode(`패배! 정답은 ${answer.join('')}`)
+				$logs.appendChild(message);
+				return;
+			}
+			tries.push(value);
+		});
     </script>
 </body>
 </html>
