--- a/javascript기초/로또 추첨기.html
+++ b/javascript기초/로또 추첨기.html
@@ -34,6 +34,9 @@
         }
 
         console.log(shuffle);
+        const winBalls = shuffle.slice(0,6).sort((a,b)=> a-b);
+        const bonus = shuffle[6];
+        console.log(winBalls, bonus);
     </script>
 </body>
 </html>
