--- a/javascript기초/로또 추첨기.html
+++ b/javascript기초/로또 추첨기.html
@@ -37,6 +37,41 @@
         const winBalls = shuffle.slice(0,6).sort((a,b)=> a-b);
         const bonus = shuffle[6];
         console.log(winBalls, bonus);
+
+        function colorize(number, $tag){
+            if(number < 10){
+                $tag.style.backgroundColor ='red';
+                $tag.style.color='white';
+            }else if(number < 20){
+                $tag.style.backgroundColor ='orange';
+            }else if(number < 30){
+                $tag.style.backgroundColor ='yellow';
+            }else if(number < 40){
+                $tag.style.backgroundColor ='blue';
+            }else{
+                $tag.style.backgroundColor ='green';
+                $tag.style.color='white';
+            }
+        }
+
+        const $result = document.querySelector('#result');
+        const $bonus = document.querySelector('#bonus');
+        let showball = (number, $target)=>{
+            const $ball = document.createElement('div');
+            $ball.className = 'ball';
+            $ball.textContent = number;
+            colorize(number, $ball);
+            $target.appendChild($ball);
+        };
+       for(let i=0;i< winBalls.length; i++){
+            setTimeout(()=>{
+                showball(winBalls[i],$result);
+            },(i+1)*1000);
+       }
+       setTimeout(()=>{
+        showball(bonus,$bonus);
+       },winBalls.length*1000 +1000);
+        
     </script>
 </body>
 </html>
