--- a/javascript기초/지뢰찾기/지뢰찾기.html
+++ b/javascript기초/지뢰찾기/지뢰찾기.html
@@ -21,10 +21,18 @@
     </style>
 </head>
 <body>
+    <form id="form">
+        <input placeholder="가로줄" id ='row' size="5" />
+        <input placeholder="세로줄" id ='cell' size="5" />
+        <input placeholder="지뢰" id ='mine' size="5" />
+        <button>생성</button>
+    </form>
+    <div id ='timer'>0</div>
     <table id ='table'>
         <tbody></tbody>
     </table>
     <div id ='result'></div>
+    
 </body>
 <script src="./지뢰찾기.js"></script>
 </html>
