--- a/자바스크립트/맛집지도/index.html
+++ b/자바스크립트/맛집지도/index.html
@@ -46,8 +46,10 @@
         <!-- 카카오지도 -->
     </main>
 
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5cb5fe3df5fc49f0b11ce177a8af453a"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5cb5fe3df5fc49f0b11ce177a8af453a&libraries=services"></script>
     <script src="/script.js"></script>
-    <script src="/비동기.js"></script>
+    <!-- <script src="/비동기.js"></script> -->
   </body>
 </html>
+
+<!-- https://sprinkle-guide-797.notion.site/Javascript-d0d9787ada434bf980f3cd4122ada0d3 -->
