--- a/자바스크립트/맛집지도/index.html
+++ b/자바스크립트/맛집지도/index.html
@@ -47,7 +47,7 @@
     </main>
 
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5cb5fe3df5fc49f0b11ce177a8af453a&libraries=services"></script>
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
     <!-- <script src="/비동기.js"></script> -->
   </body>
 </html>
