--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -16,6 +16,46 @@
                 <div class="character"></div>
             </div>       
             <!-- 캐릭터-->
+            <!-- 액자-acadeNail -->
+            <div class="acadeNail">
+                <img src="./img/nialframe-dote.png">
+            </div>
+            <div class="acadeNail-Section sectioncolor"></div>
+            <!-- 액자-acadeNail -->
+            <!-- 액자-blueleoNail -->
+            <div class="blueleoNail">
+                <img src="./img/nialframe-leopard.png">
+            </div>
+            <div class="blueleoNail-Section sectioncolor"></div>
+            <!-- 액자-blueleoNail -->
+
+            <!-- 전시-indegoFlow -->
+            <div class="indegoFlow">
+                <img src="./img/indegoFlowNail.png">
+            </div>
+            <div class="object indegoFlow-section sectioncolor"></div>
+            <!-- 전시-indegoFlow -->
+            <!-- 전시-morderBlackNail -->
+            <div class="morderBlackNail">
+                <img src="./img/morderBlackNail.png">
+            </div>
+            <div class="object morderBlackNail-section sectioncolor"></div>
+            <!-- 전시-morderBlackNail -->
+            <!-- 전시-roseNail -->
+            <div class="roseNail">
+                <img src="./img/roseNail.png">
+            </div>
+            <div class="object roseNail-section sectioncolor"></div>
+            <!-- 전시-roseNail -->
+            <!-- 뉴진즈-민지 -->
+            <div class="minji object"><img src='./img/minji.png'></div>
+            <!-- 뉴진즈-민지 -->
+            <!-- 뉴진즈-혜린 -->
+            <div class="helin object"><img src='./img/helin.png'></div>
+            <!-- 뉴진즈-혜린 -->
+            <!-- 뉴진즈-다니엘 -->
+            <div class="dainel object"><img src='./img/dainel.png'></div>
+            <!-- 뉴진즈-다니엘 -->
         </div>
     </section>
 </body>
