--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -30,22 +30,22 @@
             <!-- 액자-blueleoNail -->
 
             <!-- 전시-indegoFlow -->
-            <div class="indegoFlow">
+            <div class="indegoFlow object">
                 <img src="./img/indegoFlowNail.png">
             </div>
-            <div class="object indegoFlow-section sectioncolor"></div>
+            <div class="indegoFlow-section sectioncolor"></div>
             <!-- 전시-indegoFlow -->
             <!-- 전시-morderBlackNail -->
-            <div class="morderBlackNail">
+            <div class="morderBlackNail object">
                 <img src="./img/morderBlackNail.png">
             </div>
-            <div class="object morderBlackNail-section sectioncolor"></div>
+            <div class="morderBlackNail-section sectioncolor"></div>
             <!-- 전시-morderBlackNail -->
             <!-- 전시-roseNail -->
-            <div class="roseNail">
+            <div class="roseNail object">
                 <img src="./img/roseNail.png">
             </div>
-            <div class="object roseNail-section sectioncolor"></div>
+            <div class="roseNail-section sectioncolor"></div>
             <!-- 전시-roseNail -->
             <!-- 뉴진즈-민지 -->
             <div class="minji object"><img src='./img/minji.png'></div>
