인터랙션 추가

--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -13,6 +13,7 @@
         <div class="game_container">
             <!-- 캐릭터-->
             <div class="character-wrap">
+                <span>Enter!!</span>
                 <div class="character"></div>
             </div>       
             <!-- 캐릭터-->
@@ -20,45 +21,60 @@
             <div class="acadeNail">
                 <img src="./img/nialframe-dote.png">
             </div>
-            <div class="acadeNail-Section sectioncolor"></div>
+            <div class="acadeNail-Section sectioncolor frameAction" data-id="acadeNail"></div>
             <!-- 액자-acadeNail -->
             <!-- 액자-blueleoNail -->
             <div class="blueleoNail">
                 <img src="./img/nialframe-leopard.png">
             </div>
-            <div class="blueleoNail-Section sectioncolor"></div>
+            <div class="blueleoNail-Section sectioncolor frameAction" data-id="blueleoNail"></div>
             <!-- 액자-blueleoNail -->
-
             <!-- 전시-indegoFlow -->
             <div class="indegoFlow object">
                 <img src="./img/indegoFlowNail.png">
             </div>
-            <div class="indegoFlow-section sectioncolor"></div>
+            <div class="indegoFlow-section sectioncolor displayAction"></div>
             <!-- 전시-indegoFlow -->
             <!-- 전시-morderBlackNail -->
             <div class="morderBlackNail object">
                 <img src="./img/morderBlackNail.png">
             </div>
-            <div class="morderBlackNail-section sectioncolor"></div>
+            <div class="morderBlackNail-section sectioncolor displayAction"></div>
             <!-- 전시-morderBlackNail -->
             <!-- 전시-roseNail -->
             <div class="roseNail object">
                 <img src="./img/roseNail.png">
             </div>
-            <div class="roseNail-section sectioncolor"></div>
+            <div class="roseNail-section sectioncolor displayAction"></div>
             <!-- 전시-roseNail -->
             <!-- 뉴진즈-민지 -->
             <div class="minji object"><img src='./img/minji.png'></div>
+            <div class="minji-section sectioncolor peopleAction"></div>
             <!-- 뉴진즈-민지 -->
             <!-- 뉴진즈-혜린 -->
             <div class="helin object"><img src='./img/helin.png'></div>
+            <div class="helin-section sectioncolor peopleAction"></div>
             <!-- 뉴진즈-혜린 -->
             <!-- 뉴진즈-다니엘 -->
             <div class="dainel object"><img src='./img/dainel.png'></div>
+            <div class="dainel-section sectioncolor peopleAction"></div>
             <!-- 뉴진즈-다니엘 -->
+
+            <div class="text_wrap">
+                <div class="dim"></div>
+                <div class="text_box">
+                    <div class="close">CLOSE</div>
+                    <h2></h2>
+                    <p></p>
+                    <a href="#">
+                        보러가기 >
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
 </body>
+<script src="chatPopup.js"></script>
 <script src="class.js"></script>
 <script src="game.js"></script>
 </html>
