인터렉션 + 위아래 스크린움직임

--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -33,13 +33,13 @@
             <div class="indegoFlow object">
                 <img src="./img/indegoFlowNail.png">
             </div>
-            <div class="indegoFlow-section sectioncolor displayAction"></div>
+            <div class="indegoFlow-section sectioncolor displayAction" data-id="indegoFlow"></div>
             <!-- 전시-indegoFlow -->
             <!-- 전시-morderBlackNail -->
             <div class="morderBlackNail object">
                 <img src="./img/morderBlackNail.png">
             </div>
-            <div class="morderBlackNail-section sectioncolor displayAction"></div>
+            <div class="morderBlackNail-section sectioncolor displayAction" data-id='morderBlack'></div>
             <!-- 전시-morderBlackNail -->
             <!-- 전시-roseNail -->
             <div class="roseNail object">
@@ -49,7 +49,7 @@
             <!-- 전시-roseNail -->
             <!-- 뉴진즈-민지 -->
             <div class="minji object"><img src='./img/minji.png'></div>
-            <div class="minji-section sectioncolor peopleAction"></div>
+            <div class="minji-section sectioncolor peopleAction" data-id='minji'></div>
             <!-- 뉴진즈-민지 -->
             <!-- 뉴진즈-혜린 -->
             <div class="helin object"><img src='./img/helin.png'></div>
@@ -57,18 +57,20 @@
             <!-- 뉴진즈-혜린 -->
             <!-- 뉴진즈-다니엘 -->
             <div class="dainel object"><img src='./img/dainel.png'></div>
-            <div class="dainel-section sectioncolor peopleAction"></div>
+            <div class="dainel-section sectioncolor peopleAction"  data-id='dainel'></div>
             <!-- 뉴진즈-다니엘 -->
 
             <div class="text_wrap">
                 <div class="dim"></div>
                 <div class="text_box">
                     <div class="close">CLOSE</div>
+                    <img src="./img/nialframe-dote.png">
                     <h2></h2>
                     <p></p>
                     <a href="#">
                         보러가기 >
                     </a>
+                    <span>enter/click</span>
                 </div>
             </div>
         </div>
