--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -63,7 +63,7 @@
             <div class="text_wrap">
                 <div class="dim"></div>
                 <div class="text_box">
-                    <div class="close">CLOSE</div>
+                    <div class="close">CLOSE/ESC</div>
                     <img src="./img/nialframe-dote.png">
                     <h2></h2>
                     <p></p>
