추가마무리 수정

--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -63,14 +63,14 @@
             <div class="text_wrap">
                 <div class="dim"></div>
                 <div class="text_box">
-                    <div class="close">CLOSE/ESC</div>
+                    <div class="close">나가기</div>
                     <img src="./img/nialframe-dote.png">
                     <h2></h2>
                     <p></p>
                     <a href="#">
                         보러가기 >
                     </a>
-                    <span>enter/click</span>
+                    <span>enter or click</span>
                 </div>
             </div>
         </div>
