텍스트 수정

--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -53,7 +53,7 @@
             <!-- 뉴진즈-민지 -->
             <!-- 뉴진즈-혜린 -->
             <div class="helin object"><img src='./img/helin.png'></div>
-            <div class="helin-section sectioncolor peopleAction"></div>
+            <div class="helin-section sectioncolor "></div>
             <!-- 뉴진즈-혜린 -->
             <!-- 뉴진즈-다니엘 -->
             <div class="dainel object"><img src='./img/dainel.png'></div>
