--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -73,10 +73,17 @@
                     <span>enter or click</span>
                 </div>
             </div>
+
+            <div class="arrowBtnWrap">
+                <canvas id="joy"style='opacity: 0.8;' ></canvas>
+            </div>
+            <div class="enter">자세히 보기</div>
         </div>
     </section>
 </body>
 <script src="chatPopup.js"></script>
 <script src="class.js"></script>
 <script src="game.js"></script>
+<script src="mo_control.js"></script>
 </html>
+
