--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -13,7 +13,7 @@
         <div class="game_container">
             <!-- 캐릭터-->
             <div class="character-wrap">
-                <span>Enter!!</span>
+                <span>ENTER</span>
                 <div class="character"></div>
             </div>       
             <!-- 캐릭터-->
@@ -75,9 +75,9 @@
             </div>
 
             <div class="arrowBtnWrap">
-                <canvas id="joy"style='opacity: 0.8;' ></canvas>
+                <canvas id="joy" ></canvas>
             </div>
-            <div class="enter">자세히 보기</div>
+            <div class="enter">ENTER</div>
         </div>
     </section>
 </body>
