진짜 마지막

--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -70,7 +70,7 @@
                     <a href="#">
                         보러가기 >
                     </a>
-                    <span>enter or click</span>
+                    <span><span class="pc">enter or click</span><span class="mobile">TOUCH</span></span>
                 </div>
             </div>
 
