--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -71,7 +71,7 @@
                     <h2></h2>
                     <p></p>
                     <a href="#">
-                        보러가기 >
+                        보러가기
                     </a>
                     <span><span class="pc">enter or click</span><span class="mobile">TOUCH</span></span>
                 </div>
