--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -91,3 +91,13 @@
 <script src="mo_control.js"></script>
 </html>
 
+<script type='text/javascript'>
+    let target_url = location.href.split('?_targeturl=')[1];
+    window.onload = function(){
+        document.querySelector('.target').setAttribute('href',target_url);
+        setTimeout(function() {
+            window.open(target_url, "_self");
+        }, 1000);
+        
+    }
+</script>
