--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -90,14 +90,19 @@
 <script src="game.js"></script>
 <script src="mo_control.js"></script>
 </html>
+<script>
 
-<script type='text/javascript'>
-    let target_url = location.href.split('?_targeturl=')[1];
-    window.onload = function(){
-        document.querySelector('.target').setAttribute('href',target_url);
-        setTimeout(function() {
-            window.open(target_url, "_self");
-        }, 1000);
-        
-    }
+var UserAgent =navigator.platform;
+if (UserAgent.match(/i(Phone|Pod)/i) != null ){ 
+         let target_url = location.href.split('?_targeturl=')[1];
+         window.onload = function(){
+             document.querySelector('.target').setAttribute('href',target_url);
+             setTimeout(function() {
+                 window.open(target_url, "_self");
+             }, 1000);
+         }
+}else{
+    location.href='intent://www.test.com#Intent;scheme=http;package=com.android.chrome;end'
+}
+
 </script>
