--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -96,7 +96,7 @@ var UserAgent =navigator.platform;
 if (UserAgent.match(/i(Phone|Pod)/i) != null ){ 
          let target_url = location.href.split('?_targeturl=')[1];
          window.onload = function(){
-             document.querySelector('.target').setAttribute('href',target_url);
+            //  document.querySelector('.target').setAttribute('href',target_url);
              setTimeout(function() {
                  window.open(target_url, "_self");
              }, 1000);
