--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -90,8 +90,9 @@
 <script src="game.js"></script>
 <script src="mo_control.js"></script>
 </html>
-<script src="https://urlopen.link/lib.js"></script>
 <script>
-// 브라우저검사 없이 링크 만들기
- XenoUrlOpenLinkDo("http://url");
+const userAngent = navigator.userAgent;
+if(userAngent.indexOf('KAKAO')>-1){
+    gameContent.style.height = window.innerHeight-30 + 'px';
+}
 </script>
