--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -93,6 +93,7 @@
 <script>
 const userAngent = navigator.userAgent;
 if(userAngent.indexOf('KAKAO')>-1){
+    alert(userAngent);
     gameContent.style.height = window.innerHeight-30 + 'px';
 }
 </script>
