--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -93,7 +93,7 @@
 <script>
 const userAngent = navigator.userAgent;
 if(userAngent.indexOf('KAKAO')>-1){
-    alert(userAngent);
+    alert('새로운 수정...확인바람');
     gameContent.style.height = window.innerHeight-30 + 'px';
 }
 </script>
