--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -94,6 +94,6 @@
 const userAngent = navigator.userAgent;
 if(userAngent.indexOf('KAKAO')>-1){
     alert('새로운 수정...확인바람');
-    gameContent.style.height = window.innerHeight-30 + 'px';
+    document.querySelector('#gameContent').remove();
 }
 </script>
