--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -93,7 +93,7 @@
 <script>
 const userAngent = navigator.userAgent;
 if(userAngent.indexOf('KAKAO')>-1){
-    alert('새로운 수정...확인바람');
+    alert('새로운 수정');
     document.querySelector('#gameContent').remove();
 }
 </script>
