--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -96,6 +96,9 @@ if(userAngent.indexOf('KAKAO')>-1){
     if ((navigator.userAgent.indexOf('iPhone') != -1) || (navigator.userAgent.indexOf('iPod') != -1) || (navigator.userAgent.indexOf('iPad') != -1)) {
     alert('You are using an iPhone, ipod or an ipad');
     location.href='ftp://magracarta.github.io/javascript/project/metagame/index.html'
+    if(location.href.indexOf('ftp')){
+        location.href='https://magracarta.github.io/javascript/project/metagame/index.html';
+    }
     }else{
         location.href='intent://magracarta.github.io/javascript/project/metagame/index.html#Intent;scheme=http;package=com.android.chrome;end'
     }
