--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -91,15 +91,15 @@
 <script src="mo_control.js"></script>
 </html>
 <script>
-const userAngent = navigator.userAgent;
-if(userAngent.indexOf('KAKAO')>-1){
-    if ((navigator.userAgent.indexOf('iPhone') != -1) 
-    || (navigator.userAgent.indexOf('iPod') != -1) || (navigator.userAgent.indexOf('iPad') != -1)) {
+// const userAngent = navigator.userAgent;
+// if(userAngent.indexOf('KAKAO')>-1){
+//     if ((navigator.userAgent.indexOf('iPhone') != -1) 
+//     || (navigator.userAgent.indexOf('iPod') != -1) || (navigator.userAgent.indexOf('iPad') != -1)) {
     
-    }else{
-        //location.href='intent://magracarta.github.io/javascript/project/metagame/index.html#Intent;scheme=http;package=com.android.chrome;end'
-    }
+//     }else{
+//         //location.href='intent://magracarta.github.io/javascript/project/metagame/index.html#Intent;scheme=http;package=com.android.chrome;end'
+//     }
 
     
-}
+// }
 </script>
