--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <section id ='gameContent'>
-        <div class="game_container">
+        <div class="game_container" style="width:465px;  height: 934px; ">
             <!-- 캐릭터-->
             <div class="character-wrap">
                 <span>ENTER</span>
