--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -83,6 +83,16 @@
             </div>
             <div class="enter">ENTER</div>
         </div>
+
+        <div class="excplanPopUp">
+            <div class="pcExplan">
+                <img src="./img/keyboard.png">
+                <p>핑거수트 전시회에 어서오세요!<br>방향키를 눌러 캐릭터를<br>조작해보세요.</p>
+            </div>
+            <div class="moExplan">
+                <p>핑거수트 전시회에 어서오세요!<br>우축 하단 컨트롤러로<br>캐릭터를 조작해보세요.</p>
+            </div>
+        </div>
     </section>
 </body>
 <script src="chatPopup.js"></script>
