--- a/project/metagame/index.html
+++ b/project/metagame/index.html
@@ -95,6 +95,8 @@
         </div>
     </section>
 </body>
+<script src="bodyScrollLock.js"></script>
+<script src="scrollnot.js"></script>
 <script src="chatPopup.js"></script>
 <script src="class.js"></script>
 <script src="game.js"></script>
