--- a/javascript기초/자바스크립트 엘리/index.html
+++ b/javascript기초/자바스크립트 엘리/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <script defer src="./script.js"></script> -->
-    <script defer src="./object.js"></script>
+    <!-- <script defer src="./object.js"></script> -->
+    <!-- <script defer src="./array.js"></script> -->
+    <script defer src="./array-api.js"></script>
 </head>
 <body>
     
