--- a/코딩테스트공부/코딩테스트 모음/section05/2. 공통원소구하기-다른풀이.html
+++ b/코딩테스트공부/코딩테스트 모음/section05/2. 공통원소구하기-다른풀이.html
@@ -10,8 +10,8 @@
                 let n = arr1.length;
                 let m = arr2.length;
                 let p1 = p2 =0;
-                arr1.sort();
-                arr2.sort();
+                arr1.sort((a,b)=>a-b);
+                arr2.sort((a,b)=>a-b);
 
                 while(p1<n && p2<m){
                     if(arr1[p1] !== arr2[p2]){
