다음에 진행해야되는 부분

--- a/코딩테스트공부/코딩테스트 모음/section07/11. 뮤직비디오.html
+++ b/코딩테스트공부/코딩테스트 모음/section07/11. 뮤직비디오.html
@@ -13,11 +13,11 @@
                 let answer;
                 let lt = Math.max(...songs);
                 let rt =  songs.reduce((a,b)=> a+b , 0);
-                
-                while(lt <= rt){
-                    let mid = parseInt((lt+rt)/2);
-                    if(count(songs,mid) <= m){}
-                }
+
+                // while(lt <= rt){
+                //     let mid = parseInt((lt+rt)/2);
+                //     if(count(songs,mid) <= m){}
+                // }
 
                 return answer;
             }
