--- a/자바스크립트/자바스크립트 엘리/shopping/index.html
+++ b/자바스크립트/자바스크립트 엘리/shopping/index.html
@@ -6,19 +6,21 @@
     <title>Online Shopping</title>
     <link rel="stylesheet" href="style.css" />
     <script src="src/main.js" defer></script>
+    <!-- <script src="./json.js" defer></script> -->
   </head>
   <body>
     <!-- LOGO -->
     <img src="img/logo.png" alt="LOGO" class="logo">
     <!-- Buttons -->
-    <button class="btn"><img src="img/blue_t" alt="tshirt" class="imgBtn"></button>
-    <button class="btn"><img src="img/blue_p" alt="pants" class="imgBtn"></button>
-    <button class="btn"><img src="img/blue_s" alt="skirts" class="imgBtn"></button>
+    <div class="buttons">
+      <button class="btn"><img src="./img/blue_t.png" alt="tshirt" class="imgBtn" data-key="type"  data-value="tshirt"></button>
+      <button class="btn"><img src="./img/blue_t.png" alt="pants" class="imgBtn" data-key="type"  data-value="pants"></button>
+      <button class="btn"><img src="./img/blue_s.png" alt="skirt" class="imgBtn"  data-key="type"  data-value="skirt"></button>
 
-    <button class="btn colorBtn blue">Blue</button>
-    <button class="btn colorBtn Yellow">Yellow</button>
-    <button class="btn colorBtn pink">Pink</button>
-
+      <button class="btn colorBtn blue" data-key="color" data-value="blue" >Blue</button>
+      <button class="btn colorBtn yellow" data-key="color" data-value="yellow">Yellow</button>
+      <button class="btn colorBtn pink" data-key="color" data-value="pink">Pink</button>
+    </div>
     <!-- Items -->
     <ul class="items">
       <li class="item">
@@ -26,6 +28,5 @@
         <span class="item_description">male, large</span>
       </li>
     </ul>
-
   </body>
 </html>
