--- a/코딩테스트공부/24-codintest/정렬과 그리디/11.뮤직비디오(결정알고리즘).html
+++ b/코딩테스트공부/24-codintest/정렬과 그리디/11.뮤직비디오(결정알고리즘).html
@@ -6,39 +6,40 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script>
-        function capacity(arr,mid,count ){
+    <script>
+        function countFn(mid,arr){
+            let count = 0;
             let sum = 0;
-            for(let i =0; i < arr.length; i++ ){
-                if(sum + arr[i]> mid){
+            for(x of arr){
+                sum += x;
+                if(sum >= mid){
                     count++;
-                    sum = arr[i];
-                }else sum+= arr[i];
+                    sum = x;
+                }
             }
             return count;
         }
+
         function solution(m, songs){
             let answer;
-            let lt = Math.max(...songs);
-            let rt = songs.reduce((total, el)=> total+el ,0);
-            let count = 1;
-            while(count < m){
-                count = 1;
+            let lt = songs[songs.length-1], rt = songs.reduce((total, el)=> total+el,0);
 
-                let mid  = parseInt((lt+rt)/2);
-                count = capacity(songs, mid , count);
-
-                count < m ? rt = mid-1 : lt = mid+1;
-                answer = mid;
+            while(lt < rt){
+                let mid = Math.floor((lt+rt)/2);
+                if(countFn(mid,songs) <= 3){
+                    rt = mid - 1;
+                    answer = mid;
+                }else lt = mid+1;
             }
+            
             return answer;
         }
 
         let arr=[1, 2, 3, 4, 5, 6, 7, 8, 9];
         console.log(solution(3, arr));
-    </script> -->
+    </script>
 
-    <script>
+    <!-- <script>
         function count(songs, capacity){
             let cnt = 1, sum =0;
             for(x  of songs){
@@ -70,6 +71,6 @@
 
         let arr=[1, 2, 3, 4, 5, 6, 7, 8, 9];
         console.log(solution(3, arr));
-    </script>
+    </script> -->
 </body>
 </html>
