--- a/코딩테스트공부/24-codintest/재귀함수와완전탐색(깊이우선탐색)/4.이진트리순회(깊이우선탐색).html
+++ b/코딩테스트공부/24-codintest/재귀함수와완전탐색(깊이우선탐색)/4.이진트리순회(깊이우선탐색).html
@@ -10,6 +10,31 @@
     <script>
         function solution(n){
             let answer=[];
+            let arr = Array.from({length:n+1},()=>0);
+            function DEF(v){
+                if(v == n+1){
+                    let number = "";
+                    for(let i =1; i <= arr.length; i++){
+                        if(arr[i] == 1) number+= i + " ";
+                    }
+                   if(number.length > 0) answer.push(number);
+                }else{
+                    arr[v] = 1;
+                    DEF(v+1);
+                    arr[v] = 0;
+                    DEF(v+1);
+                }
+
+            }
+            DEF(1);
+            return answer;
+        }
+
+        console.log(solution(3));
+    </script>
+    <!-- <script>
+        function solution(n){
+            let answer=[];
             let ch = Array.from({length:n+1}, ()=>0);
             function DFS(v){
                 if(v === n+1){
@@ -17,7 +42,7 @@
                     for(let i = 1; i<=n; i++){
                         if(ch[i]===1) tmp+=i+" ";
                     }
-                   if(tmp.length > 0) answer.push(tmp.trim());
+                if(tmp.length > 0) answer.push(tmp.trim());
                 }else{
                     ch[v] = 1;
                     DFS(v+1);
@@ -25,13 +50,12 @@
                     DFS(v+1);
                 }
             }
-           
+        
             DFS(1);
             return answer;
         }
 
         console.log(solution(3));
-    </script>
-
+    </script> -->
 </body>
 </html>
