--- a/코딩테스트공부/24-codintest/재귀함수와완전탐색(깊이우선탐색)/3.이진트리(깊이우선탐색).html
+++ b/코딩테스트공부/24-codintest/재귀함수와완전탐색(깊이우선탐색)/3.이진트리(깊이우선탐색).html
@@ -15,9 +15,9 @@
                 else{
                     // console.log(n); //전위 순위
                     Def(n*2);
-                    console.log(n); //중위순위
+                    // console.log(n); //중위순위
                     Def(n*2+1);
-                    // console.log(n); //후위순위
+                    console.log(n); //후위순위
                 }
 
             }
