--- a/코딩테스트공부/24-codintest/재귀함수와완전탐색(깊이우선탐색)/9.동전교환(DFS-CutEdgeTech).html
+++ b/코딩테스트공부/24-codintest/재귀함수와완전탐색(깊이우선탐색)/9.동전교환(DFS-CutEdgeTech).html
@@ -10,9 +10,9 @@
 
                 function DFS(L, sum){
                     if(sum > m) return;
-                    if(L >= answer) return;
+                    // if(L >= answer) return;
                     if(sum == m){
-                        console.log(L,sum);
+                        // console.log(L,sum);
                         answer = Math.min(answer, L);
                     }else{
                         for(let i=0; i<arr.length; i++){
