--- a/코딩테스트공부/25-코테준비/section08_재귀함수/12.조합의수.html
+++ b/코딩테스트공부/25-코테준비/section08_재귀함수/12.조합의수.html
@@ -5,20 +5,21 @@
     </head>
     <body>
         <script>
-            function solution(n, r){         
-                let answer=[];
-                let dy= Array.from(Array(35), () => Array(35).fill(0));
-                
-                function DFS(n, r){
-                    if(dy[n][r]>0) return dy[n][r];
-                    if(n===r || r===0) return 1;
-                    else return dy[n][r]=DFS(n-1, r-1)+DFS(n-1, r);
-                }
-                answer=DFS(n, r);
-                return answer;
-            }
+function solution(n, r){         
+    let answer;
+    let memoization = Array.from(Array(n+1), ()=> Array(n+1).fill(0));
+    function DFS(n,r){
+        if(memoization[n][r] > 0)  return memoization[n][r];
+        if(n===r || r===0 )return 1;
+        else{
+            return memoization[n][r] = DFS(n-1,r-1) + DFS(n-1,r);
+        }
+    }
+    answer = DFS(n,r);
+    return answer;
+}
 
-            console.log(solution(5, 3));
+console.log(solution(33, 19));
         </script>
     </body>
 </html>
